// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getOneBrainReplByRef given: [case2] repls array is empty when: [t0] getOneBrainReplByRef is called then: it throws BadRequestError with "no repls available" 1`] = `
"BadRequestError: no repls available in context

pass repls via genContextBrain({ brains: { repls: [...] } }) or ensure
brain packages are installed for discovery mode.

{
  "ref": {
    "repo": "__mock_repo__",
    "slug": "__mock_repl__",
    "description": "mocked brain repl for tests",
    "spec": {
      "cost": {
        "time": {
          "speed": {
            "tokens": 100,
            "per": {
              "seconds": 1
            }
          },
          "latency": {
            "milliseconds": 500
          }
        },
        "cash": {
          "per": "token",
          "input": "USD 0.000_003",
          "output": "USD 0.000_015",
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.000_003_750"
          }
        }
      },
      "gain": {
        "size": {
          "context": {
            "tokens": 200000
          }
        },
        "grades": {
          "swePro": 45.9,
          "gpqa": 68.4
        },
        "cutoff": "2025-04-01",
        "domain": "ALL",
        "skills": {
          "tooluse": true,
          "vision": true
        }
      }
    }
  }
}"
`;

exports[`getOneBrainReplByRef given: [case3] repls array does not contain matching repl when: [t0] getOneBrainReplByRef is called with non-matched ref then: it throws BadRequestError with "brain repl not found" 1`] = `
"BadRequestError: brain repl not found: __mock_repo__/__mock_repl__

the repl was not registered in this context.
check that the repl is included in brains.repls or that the brain
package is installed for discovery mode.

{
  "ref": {
    "repo": "__mock_repo__",
    "slug": "__mock_repl__",
    "description": "mocked brain repl for tests",
    "spec": {
      "cost": {
        "time": {
          "speed": {
            "tokens": 100,
            "per": {
              "seconds": 1
            }
          },
          "latency": {
            "milliseconds": 500
          }
        },
        "cash": {
          "per": "token",
          "input": "USD 0.000_003",
          "output": "USD 0.000_015",
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.000_003_750"
          }
        }
      },
      "gain": {
        "size": {
          "context": {
            "tokens": 200000
          }
        },
        "grades": {
          "swePro": 45.9,
          "gpqa": 68.4
        },
        "cutoff": "2025-04-01",
        "domain": "ALL",
        "skills": {
          "tooluse": true,
          "vision": true
        }
      }
    }
  }
}"
`;
